Fixed scrollbar not using variable colors

--- a/public/styles/reset.css
+++ b/public/styles/reset.css
@@ -22,14 +22,6 @@ body {
   width: 5px;
   height: 5px;
 }
- 
-*::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px var(--scrollbar-track);
-}
- 
-*::-webkit-scrollbar-thumb {
-  background-color: var(--scrollbar-thumb);
-}
 
 /* Different utility classed */
 .noselect {
